// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentModal AppointmentModal should render correctly 1`] = `
<Modal
  afterClose={[MockFunction]}
  size="medium"
  visible={true}
>
  <div>
    <AppointmentTile
      heading="
      18 Dec 2016 04:30 PM - 05:30 PM,
      
      65
      Lindsey Close, Ref: BED1600597
  "
      hightlight={false}
    >
      <ul>
        <li>
          Address: 
           
          65
           
          Lindsey Close
           
          Great Denham
           
          Bedford
           
          Bedfordshire
           
          MK40 4GT
           
        </li>
      </ul>
    </AppointmentTile>
    <AppointmentTile
      heading="Chase MacLean"
      hightlight={false}
      key="0"
    >
      <div>
        <div
          key="0"
        >
          <div>
            <TiMail />
            <a
              href="mailto:chase.maclean@reapitestates.net"
            >
              chase.maclean@reapitestates.net
            </a>
          </div>
        </div>
      </div>
    </AppointmentTile>
    <AppointmentTile
      heading="Chase MacLean"
      hightlight={false}
      key="1"
    >
      <div>
        <div
          key="0"
        >
          <div>
            <TiMail />
            <a
              href="mailto:chase.maclean@reapitestates.net"
            >
              chase.maclean@reapitestates.net
            </a>
          </div>
        </div>
      </div>
    </AppointmentTile>
  </div>
</Modal>
`;

exports[`AppointmentModal AppointmentModal should render correctly when loading 1`] = `
<Modal
  afterClose={[MockFunction]}
  size="medium"
  visible={true}
>
  <Loader />
</Modal>
`;

exports[`AppointmentModal renderAddress should matchSnapshot 1`] = `
<div>
  <AppointmentTile
    heading="
      18 Dec 2016 04:30 PM - 05:30 PM,
      
      65
      Lindsey Close, Ref: BED1600597
  "
    hightlight={false}
  >
    <ul>
      <li>
        Address: 
         
        65
         
        Lindsey Close
         
        Great Denham
         
        Bedford
         
        Bedfordshire
         
        MK40 4GT
         
      </li>
    </ul>
  </AppointmentTile>
</div>
`;

exports[`AppointmentModal renderAttendees should matchSnapshot 1`] = `
Array [
  <AppointmentTile
    heading="Chase MacLean"
    hightlight={false}
  >
    <div>
      <div>
        <div>
          <TiMail />
          <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>
        </div>
      </div>
    </div>
  </AppointmentTile>,
  <AppointmentTile
    heading="Chase MacLean"
    hightlight={false}
  >
    <div>
      <div>
        <div>
          <TiMail />
          <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>
        </div>
      </div>
    </div>
  </AppointmentTile>,
]
`;

exports[`AppointmentModal renderCheckMark should match snapshot 1`] = `
<div>
  <TiTick />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot 1`] = `
<div>
  <div
    key="0"
  >
    <div>
      <TiMail />
      <a
        href="mailto:chase.maclean@reapitestates.net"
      >
        chase.maclean@reapitestates.net
      </a>
    </div>
  </div>
</div>
`;

exports[`AppointmentModal renderCommunicationType should match snapshot 1`] = `
<div>
  <TiMail />
</div>
`;

exports[`AppointmentModal renderDirections should matchSnapshot 1`] = `
<div>
  <AppointmentTile
    heading="Directions"
    hightlight={false}
  >
    <div>
      123
    </div>
  </AppointmentTile>
</div>
`;

exports[`AppointmentModal renderNotes should matchSnapshot 1`] = `
<div>
  <AppointmentTile
    heading="Notes"
    hightlight={false}
  >
    <div>
      123
    </div>
  </AppointmentTile>
</div>
`;
